syntax = "proto3";

option csharp_namespace = "UserServices";

service UserService {
	rpc GetUserProfile (GetUserProfileRequest) returns (GetUserProfileResponse);
}

message GetUserProfileRequest{
	string user_id =1;
}

message GetUserProfileResponse{
	User user = 1;
	oneof profile{
		StudentProfile student = 2;
		TeacherProfile teacher = 3;
	}
}

message StudentProfile{
	string first_name = 1;
	string last_name = 2;
	string group_name = 3;
	string faculty = 4;
}

message TeacherProfile{
	string first_name = 1;
	string last_name = 2;
	string department = 3;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}